Fixed clickarea bug for modalWrap

--- a/Site5/Style/style-v5.css
+++ b/Site5/Style/style-v5.css
@@ -369,7 +369,6 @@ body.rtl .sidebar {
 	left: 0;
 	right: 0;
 	top: 150px;
-	bottom: 0;
     margin: auto auto;
     background: transparent;
 }
